fixed button stateshifter/tatu/project#62

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -54,6 +54,11 @@
     .post--summary,
     .pictureWindow {
         float: left;
+        width: 50%;
+
+        @include max-media($on-laptop) {
+            width: 100%;
+        }
     }
 
     .pictureWindow {
@@ -108,9 +113,10 @@
             color: $white;
             display: block;
             font-size: 1.1rem;
-            margin: 0 auto;
+            left: 0;
             padding-top: 6px;
             position: absolute;
+            right: 0;
             text-align: center;
             text-decoration: none;
             text-transform: uppercase;
@@ -118,6 +124,12 @@
 
         &:hover {
             background-color: darken($dflt-green, 10%);
+        }
+
+        @include max-media($on-laptop) {
+            float: left;
+            position: initial;
+            width: 100%;
         }
     }
 }
